--- a/index.html
+++ b/index.html
@@ -1,60 +1,124 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In and Sign Up Form</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/ad07c457d1.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <!-- <script
+      src="https://kit.fontawesome.com/ad07c457d1.js"
+      crossorigin="anonymous"
+    ></script> -->
+  </head>
+  <body>
     <div class="container">
-        <div class="form-box">
-            <h1 id="title">Sign Up</h1>
-            <form>
-                <div class="input-group">
-                    <div class="input-field" id="nameField">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Name">
-                    </div>
+      <div class="form-box">
+        <h1 id="title">Register</h1>
+        <form name="myform" method="post" onsubmit="return validateform()">
+          <div class="input-group">
+            <div class="input-field" id="nameField">
+              <i class="fa-solid fa-user"></i>
+              <input type="text" name="name" placeholder="Name" />
+            </div>
 
-                    <div class="input-field">
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="email" placeholder="Email">
-                    </div>
+            <div class="input-field" id="email">
+              <i class="fa-solid fa-envelope"></i>
+              <input type="email" name="email" placeholder="Email" />
+            </div>
 
-                    <div class="input-field">
-                        <i class="fa-solid fa-lock"></i>
-                        <input type="password" placeholder="password">
-                    </div>
-                    <p> Lost password <a href="#">Click Here!</a></p> 
-                </div>
-                <div class="btn-field">
-                    <button type="button" id="signupBtn">Sign up</button>
-                    <button type="button" id="signinBtn" class="disable">Sign in</button>
-                </div>
-            </form>
-        </div>
-    </div> 
-    <script>
-        let signupBtn = document.getElementById("signupBtn");
-        let signinBtn = document.getElementById("signinBtn");
-        let nameField = document.getElementById("nameField");
-        let title = document.getElementById("title");
+            <div class="input-field" id="password">
+              <i class="fa-solid fa-lock"></i>
+              <input type="password" name="password" placeholder="password" />
+            </div>
+            <p>Lost password <a href="#">Click Here!</a></p>
+          </div>
+          <div class="btn-field">
+            <!-- <input type="submit"  id="signupBtn"/> -->
+            <button type="submit" id="signupBtn" onclick="register()">Register</button>
+            <button
+              type="submit"
+              id="signinBtn"
+              class="disable"
+              onclick="toggleSignIn()"
+            >
+              <a href="#">Log in</a>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    
+    <script src="script.js"></script>
+  </body>
+  </html>
+      //   let signupBtn = document.getElementById("signupBtn");
+      //   let signinBtn = document.getElementById("signinBtn");
+      //   let nameField = document.getElementById("nameField");
+      //   let title = document.getElementById("title");
 
-        signinBtn.onclick = function() {
-            nameField.style.maxHeight = 0;
-            title.innerHTML = "Sign In";
-            signupBtn.classList.add("disable");
-            signinBtn.classList.remove("disable");
-        };
+      //   signinBtn.onclick = function () {
+      //     nameField.style.maxHeight = 0;
+      //     title.innerHTML = "Sign In";
+      //     signupBtn.classList.add("disable");
+      //     signinBtn.classList.remove("disable");
+      //   };
 
-        signupBtn.onclick = function() {
-            nameField.style.maxHeight = "60px";
-            title.innerHTML = "Sign Up";
-            signupBtn.classList.remove("disable");
-            signinBtn.classList.add("disable");
-        };
-    </script>  
-</body>    
-</html>
+      //   signupBtn.onclick = function () {
+      //     nameField.style.maxHeight = "60px";
+      //     title.innerHTML = "Sign Up";
+      //     signupBtn.classList.remove("disable");
+      //     signinBtn.classList.add("disable");
+      //   };
+     function toggleSignIn() {
+//   var nameField = document.getElementById("nameField");
+      //   var title = document.getElementById("title");
+      //   var signupBtn = document.getElementById("signupBtn");
+      //   var signinBtn = document.getElementById("signinBtn");
+
+      //   if (nameField.style.maxHeight === "60px") {
+      //     nameField.style.maxHeight = 0;
+      //     title.innerHTML = "Sign In";
+      //     signupBtn.textContent = "Log in";
+      //     signinBtn.textContent = "Register";
+      //   } else {      
+      //     nameField.style.maxHeight = "60px";
+      //     title.innerHTML = "Register";
+      //     signupBtn.textContent = "Register";
+      //     signinBtn.textContent = "Log in";
+      //   }
+      // }
+
+      // function validateform() {
+      //   var name = document.myform.name.value;
+      //   var x = document.myform.email.value;
+      //   var atposition = x.indexOf("@");
+      //   var dotposition = x.lastIndexOf(".");
+      //   var password = document.myform.password.value;
+
+      //   if (name == null || name == "") {
+      //     alert("Name can't be blank");
+      //     return false;
+      //     console.log(name);
+      //   } else if (password.length < 6) {
+      //     alert("Password must be at least 6 characters long.");
+      //     return false;
+      //   } else if (
+      //     atposition < 1 ||
+      //     dotposition < atposition + 2 ||
+      //     dotposition + 2 >= x.length
+      //   ) {
+      //     alert(
+      //       "Please enter a valid e-mail address \n atpostion:" +
+      //         atposition +
+      //         "\n dotposition:" +
+      //         dotposition
+      //     );
+      //     console.log(email);
+      //     return false;
+      //   }
+      //   // Simulate form submission and transition to the sign-in view
+      //   toggleSignIn();
+         return false; // Prevent actual form submission
+       }
+    
+  
